--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-icons": "^2.2.7",
-    "react-scripts": "1.1.1"
+    "react-scripts": "1.1.1",
+    "serve": "^6.4.11"
   },
   "scripts": {
     "start": "react-scripts start",
