--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "react-dom": "^15.6.1",
     "react-icons": "^2.2.7",
     "react-scripts": "1.1.1",
+    "request": "^2.83.0",
     "serve": "^6.4.11"
   },
   "scripts": {
